--- a/client-app/package.json
+++ b/client-app/package.json
@@ -17,6 +17,7 @@
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,5 +46,8 @@
   },
   "optionalDependencies": {
     "fsevents": "^2.0.7"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.0"
   }
 }
