--- a/client-app/package.json
+++ b/client-app/package.json
@@ -23,7 +23,11 @@
     "semantic-ui-react": "^2.1.4",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
+    "react-datepicker": "^4.8.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,6 +58,8 @@
   },
   "devDependencies": {
     "@types/react-calendar": "^3.9.0",
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "@types/react-datepicker": "^4.8.0",
+    "@types/yup": "^0.32.0"
   }
 }
